# ProiectOOP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  icon.svg.import  node_2d.tscn
Objects/: Envroinment.h
cpp/: main.cpp
cpp/Objects/: Environment.h  Envroinment.h  Ice.h  Player.cpp  Player.h  Walls.h
cpp/include/: img.png.import
godot/: project.godot
godot/Scenes/: Main.tscn  node_2d.tscn
